--- a/.gitignore
+++ b/.gitignore
@@ -138,11 +138,13 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.myenv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+myenv/
 
 # Spyder project settings
 .spyderproject
